--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-navigation": "^4.3.3",
     "react-navigation-header-buttons": "^3.0.5",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-reanimated": "~1.4.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
