--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-navigation-header-buttons": "^3.0.5",
     "react-navigation-stack": "^2.3.6",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "expo-font": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
