--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.3",
+    "react-navigation-drawer": "^2.4.9",
     "react-navigation-header-buttons": "^3.0.5",
     "react-navigation-stack": "^2.3.6",
     "react-redux": "^7.2.0",
